<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>dawdler-boot-train</groupId>
		<artifactId>dawdler-boot-train</artifactId>
		<version>0.17.1-jdk17-RELEASES</version>
	</parent>
	<artifactId>order-service</artifactId>

	<dependencies>
		<dependency>
			<groupId>dawdler-boot</groupId>
			<artifactId>dawdler-boot-server</artifactId>
		</dependency>
		<dependency>
			<groupId>dawdler</groupId>
			<artifactId>dawdler-load-bean</artifactId>
		</dependency>
		<dependency>
			<groupId>dawdler</groupId>
			<artifactId>dawdler-server-plug-mybatis</artifactId>
		</dependency>
		<dependency>
			<groupId>dawdler</groupId>
			<artifactId>dawdler-server-plug-db</artifactId>
		</dependency>
		<dependency>
			<groupId>dawdler</groupId>
			<artifactId>dawdler-server-plug</artifactId>
		</dependency>
		<dependency>
			<groupId>dawdler</groupId>
			<artifactId>dawdler-server-plug-config-center-consul</artifactId>
		</dependency>
		<dependency>
			<groupId>dawdler</groupId>
			<artifactId>dawdler-server-plug-discovery-center-consul</artifactId>
		</dependency>
		<dependency>
			<groupId>com.mysql</groupId>
			<artifactId>mysql-connector-j</artifactId>
		</dependency>
		<dependency>
			<groupId>com.zaxxer</groupId>
			<artifactId>HikariCP</artifactId>
		</dependency>
		<dependency>
			<groupId>dawdler-boot-train</groupId>
			<artifactId>order-api</artifactId>
		</dependency>
	</dependencies>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>dawdler-boot</groupId>
				<artifactId>dawdler-boot-server-dependencies</artifactId>
				<version>0.17.1-jdk17-RELEASES</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>dawdler-boot</groupId>
				<artifactId>dawdler-boot-maven-plugin</artifactId>
				<version>0.17.1-jdk17-RELEASES</version>
				<executions>
					<execution>
						<goals>
							<goal>repackage</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<encoding>${project.build.sourceEncoding}</encoding>
					<source>17</source>
					<target>17</target>
					<!--debug>true</debug>-->
					<compilerArgs>
						<arg>--add-exports</arg>
						<arg>java.base/jdk.internal.misc=dawdler.core</arg>
						<arg>--add-exports</arg>
						<arg>java.base/jdk.internal.loader=dawdler.server</arg>
						<arg>--add-exports</arg>
						<arg>java.base/jdk.internal.perf=dawdler.server</arg>
						<arg>--add-exports</arg>
						<arg>java.base/jdk.internal.loader=dawdler.boot.server</arg>
						<arg>--add-exports</arg>
						<arg>java.base/jdk.internal.misc=dawdler.boot.server</arg>
						<arg>--add-exports</arg>
						<arg>java.base/jdk.internal.loader=dawdler.util</arg>
					</compilerArgs>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>